logs/django-socialnews.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/django_socialnews-1.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/socialnews'...
Compiling './lib/python3.5/site-packages/socialnews/load.py'...
***   File "./lib/python3.5/site-packages/socialnews/load.py", line 47
    print i, link, user
          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/socialnews/mptt'...
Compiling './lib/python3.5/site-packages/socialnews/mptt/forms.py'...
***   File "./lib/python3.5/site-packages/socialnews/mptt/forms.py", line 89
    except InvalidMove, e:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/socialnews/mptt/templatetags'...
Listing './lib/python3.5/site-packages/socialnews/mptt/tests'...
Listing './lib/python3.5/site-packages/socialnews/news'...
Compiling './lib/python3.5/site-packages/socialnews/news/bforms.py'...
***   File "./lib/python3.5/site-packages/socialnews/news/bforms.py", line 69
    except Topic.DoesNotExist, e:
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/socialnews/news/helpers.py'...
***   File "./lib/python3.5/site-packages/socialnews/news/helpers.py", line 69
    except KeyError, e:
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/socialnews/news/libs'...
Compiling './lib/python3.5/site-packages/socialnews/news/libs/redditstories.py'...
***   File "./lib/python3.5/site-packages/socialnews/news/libs/redditstories.py", line 77
    raise RedesignError, "titlerow div was not found"
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/socialnews/news/models.py'...
***   File "./lib/python3.5/site-packages/socialnews/news/models.py", line 302
    except LinkVote.DoesNotExist, e:
                                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/socialnews/news/scraping.py'...
***   File "./lib/python3.5/site-packages/socialnews/news/scraping.py", line 28
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/socialnews/news/search.py'...
***   File "./lib/python3.5/site-packages/socialnews/news/search.py", line 48
    print url
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/socialnews/news/tags.py'...
***   File "./lib/python3.5/site-packages/socialnews/news/tags.py", line 12
    except Tag.DoesNotExist, e:
                           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/socialnews/news/templates'...
Listing './lib/python3.5/site-packages/socialnews/news/templates/feeds'...
Listing './lib/python3.5/site-packages/socialnews/news/templates/news'...
Listing './lib/python3.5/site-packages/socialnews/news/templates/registration'...
Listing './lib/python3.5/site-packages/socialnews/news/templates/site_media'...
Listing './lib/python3.5/site-packages/socialnews/news/templates/site_media/images'...
Listing './lib/python3.5/site-packages/socialnews/news/templates/site_media/js'...
Compiling './lib/python3.5/site-packages/socialnews/news/topics.py'...
***   File "./lib/python3.5/site-packages/socialnews/news/topics.py", line 46
    except exceptions.NoSuchTopic, e:
                                 ^
SyntaxError: invalid syntax

Listing './share'...
Listing './share/python-wheels'...
